Kipi-plugins 0.9.0 - Release date: 29/11/2009
------------------------------------------------------------------------

NEW FEATURES:



BUGFIXES FROM KDE BUGZILLA (alias B.K.O | http://bugs.kde.org):

001 ==> BatchProcessImages : 213164 : kipi convert images: 16 bit png from 8 bit bmp.
002 ==> BatchProcessImages : 212118 : Rename images: sorting based on the exif date of an image.
003 ==> RawConverter       : 213681 : Batch RAW converter: Activating 16bit allows jpeg.
004 ==> JPEGLossLess       : 213889 : Segmentation fault at splash screen.
005 ==> PrintAssistant     : 124357 : Output resolution of print wizard is very low.
006 ==> PrintAssistant     : 204707 : Printwizard should be able to print uncroped thumbnails.
007 ==> PrintAssistant     : 124357 : Output resolution of print wizard is very low.
008 ==> AdvancedSlideShow  : 214744 : Advanced slideshow crash after pressing ok.
009 ==> GPSSync            : 135387 : Stickers of photos on the world map.
010 ==> JPEGLossLess       : 215644 : Rotate image fails under windows.
011 ==> FlickrExport       : 215646 : Export to flickr fails under windows.
012 ==> 